working github connection
